[package]
name = "axwdeciphersolver"
version = "0.1.0"
edition = "2021"
authors = ["Jan Niklas Richter"]
description = "A solver for monoalphabetic substitution ciphers, especially for the game https://decipher.wtf"
license-file = "LICENSE.txt"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }
